force-app/main/default/objects/Routine_Task_Timer__c/Routine_Task_Timer__c.object-meta.xml
<CustomObject>
    <description>Tracks time spent on individual routine tasks to identify bottlenecks</description>
    <label>Routine Task Timer</label>
    <pluralLabel>Routine Task Timers</pluralLabel>
    <nameField>
        <displayFormat>RTT-{0000}</displayFormat>
        <label>Task Timer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>