force-app/main/default/objects/Routine_Task_Timer__c/fields/Daily_Routine__c.field-meta.xml
<CustomField>
    <fullName>Daily_Routine__c</fullName>
    <label>Daily Routine</label>
    <description>Lookup to parent Daily_Routine__c record</description>
    <type>Lookup</type>
    <referenceTo>Daily_Routine__c</referenceTo>
    <relationshipLabel>Routine Task Timers</relationshipLabel>
    <relationshipName>Routine_Task_Timers</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>