force-app/main/default/objects/Routine_Task_Timer__c/fields/Delay_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Delay_Minutes__c</fullName>
    <label>Delay (Minutes)</label>
    <description>Difference between actual and expected duration</description>
    <type>Number</type>
    <formula>IF(
    AND(NOT(ISBLANK(Duration_Minutes__c)), NOT(ISBLANK(Expected_Duration_Minutes__c))),
    Duration_Minutes__c - Expected_Duration_Minutes__c,
    NULL
)</formula>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>