force-app/main/default/objects/Routine_Task_Timer__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Duration (Minutes)</label>
    <description>Calculated duration from start to end time</description>
    <type>Number</type>
    <formula>IF(
    NOT(ISBLANK(End_Time__c)),
    (End_Time__c - Start_Time__c) * 24 * 60,
    NULL
)</formula>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>