force-app/main/default/objects/Routine_Task_Timer__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <description>When the task ended</description>
    <type>DateTime</type>
</CustomField>