force-app/main/default/objects/Routine_Task_Timer__c/fields/Energy_After__c.field-meta.xml
<CustomField>
    <fullName>Energy_After__c</fullName>
    <label>Energy After</label>
    <description>Energy level after completing task (1-10)</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>