force-app/main/default/objects/Routine_Task_Timer__c/fields/Energy_Before__c.field-meta.xml
<CustomField>
    <fullName>Energy_Before__c</fullName>
    <label>Energy Before</label>
    <description>Energy level before starting task (1-10)</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>