force-app/main/default/objects/Routine_Task_Timer__c/fields/Expected_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Expected_Duration_Minutes__c</fullName>
    <label>Expected Duration (Minutes)</label>
    <description>Expected duration for this task</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>