force-app/main/default/objects/Routine_Task_Timer__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <description>Notes about the task</description>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>