force-app/main/default/objects/Routine_Task_Timer__c/fields/Skip_Reason__c.field-meta.xml
<CustomField>
    <fullName>Skip_Reason__c</fullName>
    <label>Skip Reason</label>
    <description>Reason for skipping this task</description>
    <type>Text</type>
    <length>255</length>
</CustomField>