force-app/main/default/objects/Routine_Task_Timer__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <description>When the task started</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>