force-app/main/default/objects/Routine_Task_Timer__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <label>Task Name</label>
    <description>Name of the routine task</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wake Up</fullName>
            </value>
            <value>
                <fullName>Shower</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Meds</fullName>
            </value>
            <value>
                <fullName>Exercise</fullName>
            </value>
            <value>
                <fullName>Meditation</fullName>
            </value>
            <value>
                <fullName>Journaling</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>