force-app/main/default/objects/Routine_Task_Timer__c/fields/Was_Skipped__c.field-meta.xml
<CustomField>
    <fullName>Was_Skipped__c</fullName>
    <label>Was Skipped</label>
    <description>Whether this task was skipped</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>