force-app/main/default/objects/Routine_Task_Timer__c/validationRules/End_Time_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_After_Start</fullName>
    <active>true</active>
    <description>Ensures end time is after start time</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(End_Time__c)),
    End_Time__c &lt;= Start_Time__c
)</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>End Time must be after Start Time.</errorMessage>
</ValidationRule>