force-app/main/default/objects/Routine_Task_Timer__c/validationRules/Energy_Levels_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Energy_Levels_Range</fullName>
    <active>true</active>
    <description>Ensures energy levels are between 1 and 10</description>
    <errorConditionFormula>OR(
    AND(NOT(ISBLANK(Energy_Before__c)), OR(Energy_Before__c &lt; 1, Energy_Before__c &gt; 10)),
    AND(NOT(ISBLANK(Energy_After__c)), OR(Energy_After__c &lt; 1, Energy_After__c &gt; 10))
)</errorConditionFormula>
    <errorMessage>Energy levels must be between 1 and 10.</errorMessage>
</ValidationRule>