force-app/main/default/objects/Routine_Task_Timer__c/validationRules/Expected_Duration_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Duration_Positive</fullName>
    <active>true</active>
    <description>Ensures expected duration is positive</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Expected_Duration_Minutes__c)),
    Expected_Duration_Minutes__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Expected_Duration_Minutes__c</errorDisplayField>
    <errorMessage>Expected Duration must be a positive number.</errorMessage>
</ValidationRule>